# neodb

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
console/: CMakeLists.txt
include/neodb/: data_type.hpp  database.hpp  file_database.hpp  i_database.hpp  i_record.hpp  i_schema.hpp  i_table.hpp  i_table_schema.hpp  memory_database.hpp  page.hpp  record.hpp  root_page.hpp  schema.hpp  table.hpp  table_facade.hpp  table_schema.hpp
server/: CMakeLists.txt
server/config/: server.rjson
server/hdr/: server.hpp
server/src/: main.cpp  server.cpp
unit_tests/: CMakeLists.txt
unit_tests/src/: tests.cpp
